메인 슬라이드 추가

--- a/main.html
+++ b/main.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>제주시장애인지역사회통합돌봄지원센터</title>
     <link href="sources/css/style.css" rel="stylesheet">
+    <link href="sources/css/jquery.bxslider.min.css" rel="stylesheet">
+
     <!-- javaScript -->
     <script src="sources/js/jquery-1.11.3.min.js"></script>
+    <script src="sources/js/jquery.bxslider.min.js"></script>
     <script src="sources/js/slick.min.js"></script>
     <script src="sources/js/common.js"></script>
 
@@ -145,7 +148,11 @@
         <div class="container">
             <div class="main_wrap">
                 <section class="main_content">
-                    <h2>메인사진</h2>
+                    <ul class="main_img slider">
+                        <li><img src="sources/images/main.jpg" alt="메인사진1"></li>
+                        <li><img src="sources/images/main.jpg" alt="메인사진2"></li>
+                        <li><img src="sources/images/main.jpg" alt="메인사진3"></li>
+                    </ul>
 
                     <ul>
                         <li class="c1">
