사업안내 페이지 수정

--- a/sub01.html
+++ b/sub01.html
@@ -313,7 +313,7 @@
                             <li>▶ 운행지역 : 제주특별자치도 전지역 (섬지역 제외)</li>
                             <li>▶ 운행차량 : 총 3대 (휠체어 슬로프 차량 2대, 12인승 승합차량 1대)</li>
                             <li>▶ 준수사항</li>
-                            <li>- 예약전화를 통해 이용 신청해 주세요.</li>
+                            <li>- 예약전화를 통해 이용 신청해 주세요. (시내 1일 전 / 시외 및 읍면 2일 전)</li>
                             <li>- 특정 차량 또는 운전원을 지정할 수 없습니다.</li>
                             <li>- 출발지·목적지 변경 및 예약을 취소할 경우에는 최소 1시간 전까지 연락 바랍니다.</li>
                             <li>- 운전원에게 안전운행에 방해되는 신체적 접촉이나 폭언은 삼가해 주세요.</li>
@@ -604,7 +604,8 @@
                                     <h5><img src="sources/images/s03.svg" alt="사회참여">사회참여</h5>
                                     <p>지역사회 이용 및 사회활동 참여 지원</p>
                                     <ul>
-                                        <li>· 장애인복지관 및 <span>장애인자립생활센터</span></li>
+                                        <li>· 장애인복지관</li>
+                                        <li>· 장애인자립생활센터</li>
                                         <li>· 정신건강복지센터</li>
                                         <li>· 장애인 취업알선기관</li>
                                     </ul>
