사업안내 이미지 수정

--- a/sub01.html
+++ b/sub01.html
@@ -200,7 +200,30 @@
                             <li>- 일상생활능력이 있거나 서비스 지원을 받으면 일상생활에 큰 지장이 없는 자</li>
                             <li>- 공동생활(2인)에 있어 결격사유가 없는 자</li>
                             <li>▶ 이용절차</li>
-                            <li><img src="sources/images/use2.svg" alt="이용절차"></li>
+                            <li>
+                                <ul class="use">
+                                    <li>
+                                        <h6>입주자 모집공고</h6>
+                                        <p>읍면동주민센터<span>통합돌봄창구</span></p>
+                                    </li>
+                                    <li>
+                                        <h6>입주 신청</h6>
+                                        <p>읍면동주민센터<span>통합돌봄창구</span></p>
+                                    </li>
+                                    <li>
+                                        <h6>초기 면접</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
+                                    <li>
+                                        <h6>입주자 선정</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
+                                    <li>
+                                        <h6>지원주택 입주</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
 
@@ -209,13 +232,13 @@
                         
                         <div class="happy">
                             <h6>행복플래너</h6>
-                            <img src="sources/images/h01.svg" alt="행복플래너">
+                            <img src="sources/images/h01.png" alt="행복플래너">
                             <p>제주시장애인지역사회통합돌봄지원센터</p>
                         </div>
 
                         <div class="happy icon">
                             <h6>행복코치</h6>
-                            <img src="sources/images/h02.svg" alt="행복플래너">
+                            <img src="sources/images/h02.png" alt="행복플래너">
                             <p>장애인지원주택</p>
                         </div>
                     </div>
@@ -304,8 +327,27 @@
                             <li>▶ 신청접수 : 제주시장애인지역사회통합돌봄지원센터</li>
                             <li>▶ 이용절차</li>
                             <li>
-                                <ul class="order">
-                                    <img src="sources/images/order.svg" alt="이용방법">
+                                <ul class="use">
+                                    <li>
+                                        <h6>신청문의</h6>
+                                        <p>통합돌봄지원센터 및<span>읍면동주민센터</span>통합돌봄창구</p>
+                                    </li>
+                                    <li>
+                                        <h6>신청서작성 및 제출</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
+                                    <li>
+                                        <h6>예약전화</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
+                                    <li>
+                                        <h6>예약확인 및 승인</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
+                                    <li>
+                                        <h6>차량배치 및 이용</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
                                 </ul>
                             </li>
                             <li>▶ 이용요금 : 무료</li>
@@ -359,7 +401,26 @@
                     <div class="con04">
                         <h5><small>■</small>이용 절차</h5>
                         <ul>
-                            <img src="sources/images/use.svg" alt="이용방법">
+                            <li>
+                                <ul class="use">
+                                    <li>
+                                        <h6>신청문의</h6>
+                                        <p>통합돌봄지원센터 및 <span>읍면동주민센터</span>통합돌봄창구</p>
+                                    </li>
+                                    <li>
+                                        <h6>신청서작성 및 제출</h6>
+                                        <p>통합돌봄지원센터 및 <span>읍면동주민센터</span>통합돌봄창구</p>
+                                    </li>
+                                    <li>
+                                        <h6>대상자 선정 및 승인</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
+                                    <li>
+                                        <h6>서비스 지원</h6>
+                                        <p class="pt">통합돌봄지원센터</p>
+                                    </li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -390,9 +451,9 @@
                             <li>- 신청서류 : 제주시 장애인 지역사회 통합돌봄 신청서 1부 / 개인정보 수집·이용 제공동의서 1부</li>
                             <li>- 문의처 : 읍·면·동 주민센터 통합돌봄 창구(064-728-3041 ~ 3043) / 제주시장애인지역사회통합돌봄지원센터 (064-751-5150)</li>
                             <li>▶ 주요서비스</li>
-                            <li><img src="sources/images/service.svg" alt="주요서비스"></li>
+                            <li><img src="sources/images/service.png" alt="주요서비스"></li>
                             <li>▶ 지원장비</li>
-                            <li class="eq"><img src="sources/images/equipment.svg" alt="지원장비"></li>
+                            <li class="eq"><img src="sources/images/equipment.png" alt="지원장비"></li>
                         </ul>
                     </div>
                 </div>
@@ -566,7 +627,7 @@
                         <ul>
                             <li>- 체계적인 센터 운영을 위하여 각계 전문가들과 협약하는 업무협약 진행</li>
                             <li>- 지역사회 내 유관단체와의 연대·협력을 통한 자원연계 및 인프라 구축</li>
-                            <li><img src="sources/images/table.svg" alt="정책대상자 표"></li>
+                            <li><img src="sources/images/table.png" alt="정책대상자 표"></li>
                         </ul>
                     </div>
 
