--- a/or01.html
+++ b/or01.html
@@ -241,15 +241,25 @@
                     <div class="con01">
                         <h5><small>■</small>업무분장</h5>
 
-                        <div class="work_list">
+                        <div class="team_work">
 
                             <ul>
                                 <li>센터장</li>
                                 <li>
-                                    <dl>
-                                        <dt>최영열 (센터장)</dt>
-                                        <dd>· 지원센터 총괄</dd>
-                                    </dl>
+                                    <table>
+                                        <tbody>
+                                            <tr>
+                                                <th>직책</th>
+                                                <th>성명</th>
+                                                <th>담당업무</th>
+                                            </tr>
+                                            <tr>
+                                                <td>센터장</td>
+                                                <td>최영열</td>
+                                                <td>· 지원센터 총괄</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </li>
                             </ul>
                             
