--- a/or02.html
+++ b/or02.html
@@ -241,22 +241,39 @@
                     <div class="con01">
                         <h5><small>■</small>업무분장</h5>
 
-                        <div class="work_list">
+                        <div class="team_work">
                             <ul>
                                 <li>운영지원팀</li>
                                 <li>
-                                    <dl>
-                                        <dt>임주혜 (운영지원팀장)</dt>
-                                        <dd>· 운영지원팀 업무 총괄</dd>
-                                        <dd>· 회계, 재산관리, 운영위원회, 기관견학, 직원연수</dd>
-                                    </dl>
-                                </li>
-                                <li>
-                                    <dl>
-                                        <dt>김종청 / 오종석 (응급안전요원)</dt>
-                                        <dd>· 장애인이 거주하는 지원주택, 자립생활주택 및 재가장애인 거주주택에 <span>응급안전시스템 설치 기원</span></dd>
-                                        <dd>· 스마트케어 시스템 모니터링 및 안심생활 지원</dd>
-                                    </dl>
+                                    <table>
+                                        <tbody>
+                                            <tr>
+                                                <th>직책</th>
+                                                <th>성명</th>
+                                                <th>담당업무</th>
+                                            </tr>
+                                            <tr>
+                                                <td>운영지원팀장</td>
+                                                <td>임주혜</td>
+                                                <td>
+                                                    <ul class="work_list">
+                                                        <li>· 운영지원팀 업무 총괄</li>
+                                                        <li>· 회계, 재산관리, 운영위원회, 기관견학, 직원연수</li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>응급안전요원</td>
+                                                <td>김종청<span>오종석</span></td>
+                                                <td>
+                                                    <ul class="work_list">
+                                                        <li>· 장애인이 거주하는 지원주택, 자립생활주택 및 재가장애인 거주주택에 응급안전시스템 <span>설치 기원</span></li>
+                                                        <li>· 스마트케어 시스템 모니터링 및 안심생활 지원</li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>                             
                                 </li>
                             </ul>
                         </div>
