--- a/or03.html
+++ b/or03.html
@@ -241,24 +241,41 @@
                     <div class="con01">
                         <h5><small>■</small>업무분장</h5>
 
-                        <div class="work_list">
+                        <div class="team_work">
                             <ul>
                                 <li>사업지원팀</li>
                                 <li>
-                                    <dl>
-                                        <dt>김형준 (사업지원팀장)</dt>
-                                        <dd>· 사업지원팀 업무 총괄</dd>
-                                        <dd>· 가족기능강화사업, 장애인정서지원사업, 이동지원사업</dd>
-                                        <dd>· 홍보사업 총괄</dd>
-                                    </dl>
-                                </li>
-                                <li>
-                                    <dl>
-                                        <dt>양성우 / 현훈경 (운전원)</dt>
-                                        <dd>· 이용자 접수 및 차량 배차 지원</dd>
-                                        <dd>· 차량 운전 및 관리</dd>
-                                        <dd>· 장애인 승·하차 지원</dd>
-                                    </dl>
+                                    <table>
+                                        <tbody>
+                                            <tr>
+                                                <th>직책</th>
+                                                <th>성명</th>
+                                                <th>담당업무</th>
+                                            </tr>
+                                            <tr>
+                                                <td>사업지원팀장</td>
+                                                <td>김형준</td>
+                                                <td>
+                                                    <ul class="work_list">
+                                                        <li>· 사업지원팀 업무 총괄</li>
+                                                        <li>· 가족기능강화사업, 장애인정서지원사업, 이동지원사업</li>
+                                                        <li>· 홍보사업 총괄</li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>운전원</td>
+                                                <td>양성우<span>현훈경</span></td>
+                                                <td>
+                                                    <ul class="work_list">
+                                                        <li>· 이용자 접수 및 차량 배차 지원</li>
+                                                        <li>· 차량 운전 및 관리</li>
+                                                        <li>· 장애인 승·하차 지원</li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>  
                                 </li>
                             </ul>
                         </div>
