--- a/or04.html
+++ b/or04.html
@@ -241,34 +241,54 @@
                     <div class="con01">
                         <h5><small>■</small>업무분장</h5>
 
-                        <div class="work_list">
+                        <div class="team_work">
 
                             <ul>
                                 <li>주거지원팀</li>
                                 <li>
-                                    <dl>
-                                        <dt>오태림 (주거지원팀장)</dt>
-                                        <dd>· 주거지원팀 총괄</dd>
-                                        <dd>· 대상자 발굴, 통합사례관리</dd>
-                                    </dl>
-                                </li>
-                                <li>
-                                    <dl>
-                                        <dt>고승우 / 신현아 (행복플래너)</dt>
-                                        <dd>· 지원당사자와 '주거'와 '옹호'를 중점적으로 지원</dd>
-                                        <dd>· 임대주택신청 및 주택 마련 알선, 사회서비스 신청</dd>
-                                        <dd>· 자원개발 및 연계, 개인별주거지원계획 수립</dd>
-                                        <dd>· 당사자 및 보호자 상담 및 교육</dd>
-                                        <dd>· 행복코치 업무조정 및 연계</dd>
-                                    </dl>
-                                </li>
-                                <li>
-                                    <dl>
-                                        <dt>박수경 / 김수지 / 김양선 (행복코치)</dt>
-                                        <dd>· 지원당사자의 '일상 생활'과 '사회 참여' 부분을 중점 지원</dd>
-                                        <dd>· 당사자 가정을 방문하여 실질적인 주거지원서비스(가사관리, 건강관리, <span>여가활동 등) 제공</span></dd>
-                                        <dd>· 행복플래너와 주기적으로 점검과 평가</dd>
-                                    </dl>
+                                    <table>
+                                        <tbody>
+                                            <tr>
+                                                <th>직책</th>
+                                                <th>성명</th>
+                                                <th>담당업무</th>
+                                            </tr>
+                                            <tr>
+                                                <td>주거지원팀장</td>
+                                                <td>오태림</td>
+                                                <td>
+                                                    <ul class="work_list">
+                                                        <li>· 주거지원팀 총괄</li>
+                                                        <li>· 대상자 발굴, 통합사례관리</li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>행복플래너</td>
+                                                <td>고승우<span>신현아</span></td>
+                                                <td>
+                                                    <ul class="work_list">
+                                                        <li>· 지원당사자의 '주거'와 '옹호'를 중점적으로 지원</li>
+                                                        <li>· 임대주택신청 및 주택 마련 알선, 사회서비스 신청</li>
+                                                        <li>· 자원개발 및 연계, 개인별주거지원계획 수립</li>
+                                                        <li>· 당사자 및 보호자 상담 및 교육</li>
+                                                        <li>· 행복코치 업무조정 및 연계</li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>행복코치</td>
+                                                <td>박수경<span>김수지</span><span>김양선</span></td>
+                                                <td>
+                                                    <ul class="work_list">
+                                                        <li>· 지원당사자의 '일상 생활'과 '사회 참여' 부분을 중점 기원</li>
+                                                        <li>· 당사자 가정을 방문하여 실질적인 주거지원서비스(기사관리, 건강관리, <span>여가활동 등) 제공</span></li>
+                                                        <li>· 행복플래너와 주기적으로 점검과 평가</li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>  
                                 </li>
                             </ul>
                         </div>
