메인 이미지 링크 추가

--- a/main.html
+++ b/main.html
@@ -149,9 +149,9 @@
             <div class="main_wrap">
                 <section class="main_content">
                     <ul class="main_img slider">
-                        <li><img src="sources/images/main.jpg" alt="메인사진1"></li>
-                        <li><img src="sources/images/main.jpg" alt="메인사진2"></li>
-                        <li><img src="sources/images/main.jpg" alt="메인사진3"></li>
+                        <li><a href="http://www.naver.com"><img src="sources/images/main.jpg" alt="메인사진1"></a></li>
+                        <li><a href=""><img src="sources/images/main.jpg" alt="메인사진2"></a></li>
+                        <li><a href=""><img src="sources/images/main.jpg" alt="메인사진3"></a></li>
                     </ul>
 
                     <ul>
