--- a/main.html
+++ b/main.html
@@ -154,7 +154,7 @@
                         <li><a href=""><img src="sources/images/main.jpg" alt="메인사진3"></a></li>
                     </ul>
 
-                    <ul>
+                    <ul class="main_banners">
                         <li class="c1">
                             <a href="#">
                                 <h5>사업소개
