접근성 심사 대비

--- a/sub01.html
+++ b/sub01.html
@@ -142,7 +142,6 @@
 
     <button class="menuClose">메뉴닫기</button>
     <!-- E:header -->
-    <!-- E:header -->
     <!-- S:mainContent -->
     <div id="content">
         <div class="sub_container">
@@ -195,7 +194,7 @@
                     <div class="con03">
                         <h5><small>■</small>지원주택</h5>
                         <div class="care">
-                            <h6><img src="sources/images/logo3.svg">지원주택이란?</h6>
+                            <h6><img src="/wp/assets/source/images/logo3.svg" alt="">지원주택이란?</h6>
                             <p>지원주택은 지역사회 주거생활이 취약한 사람들에게 안정적인 주거생활이 가능하도록 주택을 제공하면서 여기에 필요한 서비스를 연결하는 것을 의미</p>
                         </div>
                         <ul class="care-list">
@@ -236,24 +235,24 @@
                         
                         <div class="happy">
                             <h6>행복플래너</h6>
-                            <img src="sources/images/h01.png" alt="행복플래너">
+                            <img src="/wp/assets/source/images/h01.png" alt="행복플래너">
                             <p>제주시장애인지역사회통합돌봄지원센터</p>
                         </div>
 
                         <div class="happy icon">
                             <h6>행복코치</h6>
-                            <img src="sources/images/h02.png" alt="행복플래너">
+                            <img src="/wp/assets/source/images/h02.png" alt="행복플래너">
+                            <div class="sr-only">금전관리,건강관리,주택관리,쇼핑,가사관리,사회활동,주택알선</div>
                             <p>장애인지원주택</p>
                         </div>
                     </div>
-
                     <div class="con05">
                         <h5><small>■</small>서비스 영역</h5>
                         <ul class="service">
                             <li>
                                 <div>
                                     <small>STEP 01</small>
-                                    <h5><img src="sources/images/s01.svg" alt="주거">주거</h5>
+                                    <h5><img src="/wp/assets/source/images/s01.svg" alt="">주거</h5>
                                     <p>주거공간 마련 및 유지관련 지원</p>
                                     <ul>
                                         <li>· 주택알선 및 계약</li>
@@ -266,7 +265,7 @@
                             <li>
                                 <div>
                                     <small>STEP 02</small>
-                                    <h5><img src="sources/images/s02.svg" alt="일상생활">일상생활</h5>
+                                    <h5><img src="/wp/assets/source/images/s02.svg" alt="">일상생활</h5>
                                     <p>주거생활유지에 필요한 일상생활 지원</p>
                                     <ul>
                                         <li>· 자기관리</li>
@@ -281,7 +280,7 @@
                             <li>
                                 <div>
                                     <small>STEP 03</small>
-                                    <h5><img src="sources/images/s03.svg" alt="사회참여">사회참여</h5>
+                                    <h5><img src="/wp/assets/source/images/s03.svg" alt="">사회참여</h5>
                                     <p>지역사회 이용 및 사회활동 참여 지원</p>
                                     <ul>
                                         <li>· 쇼핑</li>
@@ -295,7 +294,7 @@
                             <li>
                                 <div>
                                     <small>STEP 04</small>
-                                    <h5><img src="sources/images/s04.svg" alt="옹호">옹호</h5>
+                                    <h5><img src="/wp/assets/source/images/s04.svg" alt="">옹호</h5>
                                     <p>권리보호 및 자기결정권 보장 지원</p>
                                     <ul>
                                         <li>· 법률지원 연계</li>
@@ -447,7 +446,7 @@
                     <div class="con03">
                         <h5><small>■</small>응급안전시스템(스마트홈케어서비스)</h5>
                         <div class="care">
-                            <h6><img src="sources/images/logo3.svg">스마트홈케어 서비스란?</h6>
+                            <h6><img src="/wp/assets/source/images/logo3.svg" alt="">스마트홈케어 서비스란?</h6>
                             <p>장애인 가정에 활동량감지기, 응급호출기, 스마트 전등, 가스차단기 등을 설치하여 응급상황 발생시 보호자 및 응급안전요원에게 연락해 후속 조치를 제공하는 서비스입니다.</p>
                         </div>
                         <ul class="care-list">
@@ -455,9 +454,31 @@
                             <li>- 신청서류 : 제주시 장애인 지역사회 통합돌봄 신청서 1부 / 개인정보 수집·이용 제공동의서 1부</li>
                             <li>- 문의처 : 읍·면·동 주민센터 통합돌봄 창구(064-728-3041 ~ 3043) / 제주시장애인지역사회통합돌봄지원센터 (064-751-5150)</li>
                             <li>▶ 주요서비스</li>
-                            <li><img src="sources/images/service.png" alt="주요서비스"></li>
+                            <li>
+                                <img src="/wp/assets/source/images/service.png" alt="">
+                                <div class="sr-only">
+                                    24시간 항시돌봄, 119 응급호출, 365 활동량 분석, 24시간 비상호출
+                                </div>
+                            </li>
                             <li>▶ 지원장비</li>
-                            <li class="eq"><img src="sources/images/equipment.png" alt="지원장비"></li>
+                            <li class="eq"><img src="/wp/assets/source/images/equipment.png" alt="">
+                                <div class="sr-only">
+                                    <h6>게이트웨이</h6>
+                                    원터치 응급 호출 버튼,
+                                    특허받은 자동 활동량 모니터링 시스템,
+                                    단축키를 이용한 무료통화 서비스,
+                                    <h6>스마트 전등</h6>
+                                    리모컨을 이용한 전등 오픈
+                                    <h6>활동량 감지기</h6>
+                                    침실, 화장실 및 주방에서의 활동량을 감지하여 응급상황 인지
+                                    <h6>가스차단기</h6>
+                                    화재위험시 자동으로 가스차단
+                                    <h6>도어 센서</h6>
+                                    <h6>IOT 전등스위치</h6>
+                                    <h6>IOT 스마트플러그</h6>
+                                    
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -631,7 +652,7 @@
                         <ul>
                             <li>- 체계적인 센터 운영을 위하여 각계 전문가들과 협약하는 업무협약 진행</li>
                             <li>- 지역사회 내 유관단체와의 연대·협력을 통한 자원연계 및 인프라 구축</li>
-                            <li><img src="sources/images/table.png" alt="정책대상자 표"></li>
+                            <li><img src="/wp/assets/source/images/table.png" alt="정책대상자 표"></li>
                         </ul>
                     </div>
 
@@ -641,7 +662,7 @@
                             <li>
                                 <div>
                                     <small>STEP 01</small>
-                                    <h5><img src="sources/images/s01.svg" alt="주거">주거</h5>
+                                    <h5><img src="/wp/assets/source/images/s01.svg" alt="">주거</h5>
                                     <p>주거공간 마련 및 유지관련 지원</p>
                                     <ul>
                                         <li>· LH공사</li>
@@ -654,7 +675,7 @@
                             <li>
                                 <div>
                                     <small>STEP 02</small>
-                                    <h5><img src="sources/images/s02.svg" alt="일상생활">일상생활</h5>
+                                    <h5><img src="/wp/assets/source/images/s02.svg" alt="">일상생활</h5>
                                     <p>주거생활유지에 필요한 일상생활 지원</p>
                                     <ul>
                                         <li>· 사회적경제지원센터<span>적십자회</span></li>
@@ -666,7 +687,7 @@
                             <li>
                                 <div>
                                     <small>STEP 03</small>
-                                    <h5><img src="sources/images/s03.svg" alt="사회참여">사회참여</h5>
+                                    <h5><img src="/wp/assets/source/images/s03.svg" alt="">사회참여</h5>
                                     <p>지역사회 이용 및 사회활동 참여 지원</p>
                                     <ul>
                                         <li>· 장애인복지관</li>
@@ -679,7 +700,7 @@
                             <li>
                                 <div>
                                     <small>STEP 04</small>
-                                    <h5><img src="sources/images/s04.svg" alt="옹호">옹호</h5>
+                                    <h5><img src="/wp/assets/source/images/s04.svg" alt="">옹호</h5>
                                     <p>권리보호 및 자기결정권 보장 지원</p>
                                     <ul>
                                         <li>· 발달장애인지원센터</li>
@@ -717,16 +738,16 @@
             <div class="agency">
                 <button class="agency-open">유관기관 <i class="icon-right-open"></i></button>
                 <div class="agency-link">
-                    <a href="http://www.mohw.go.kr" target="blank">보건복지부</a>
-                    <a href="http://jejubokji.net" target="blank">제주특별자치도사회복지협의회</a>
-                    <a href="http://jeju.welfare.net" target="blank">제주특별자치도사회복지사협회</a>
-                    <a href="https://jj.chest.or.kr" target="blank">제주사회복지공동모금회</a>
-                    <a href="http://www.jejubumo.or.kr" target="blank">제주특별자치도장애인부모회</a>
-                    <a href="https://broso.or.kr/jeju" target="blank">제주특별자치도발달장애인지원센터</a>
-                    <a href="http://www.jaapd.or.kr" target="blank">제주특별자치도장애인권익옹호기관</a>
-                    <a href="http://www.jejurehab.or.kr" target="blank">제주특별자치도장애인종합복지관</a>
-                    <a href="http://jcil.or.kr" target="blank">제주장애인자립생활센터</a>
-                    <a href="http://www.jejuaidd.or.kr" target="blank">(사)제주특별자치도지적발달장애인복지협회</a>
+                    <a href="http://www.mohw.go.kr" target="blank" title="새창">보건복지부</a>
+                    <a href="http://jejubokji.net" target="blank" title="새창">제주특별자치도사회복지협의회</a>
+                    <a href="http://jeju.welfare.net" target="blank" title="새창">제주특별자치도사회복지사협회</a>
+                    <a href="https://jj.chest.or.kr" target="blank" title="새창">제주사회복지공동모금회</a>
+                    <a href="http://www.jejubumo.or.kr" target="blank" title="새창">제주특별자치도장애인부모회</a>
+                    <a href="https://broso.or.kr/jeju" target="blank" title="새창">제주특별자치도발달장애인지원센터</a>
+                    <a href="http://www.jaapd.or.kr" target="blank" title="새창">제주특별자치도장애인권익옹호기관</a>
+                    <a href="http://www.jejurehab.or.kr" target="blank" title="새창">제주특별자치도장애인종합복지관</a>
+                    <a href="http://jcil.or.kr" target="blank" title="새창">제주장애인자립생활센터</a>
+                    <a href="http://www.jejuaidd.or.kr" target="blank" title="새창">(사)제주특별자치도지적발달장애인복지협회</a>
                 </div>
 
             </div>      
