--- a/main.html
+++ b/main.html
@@ -466,16 +466,16 @@
             <div class="agency">
                 <button class="agency-open">유관기관 <i class="icon-right-open"></i></button>
                 <div class="agency-link">
-                    <a href="http://www.mohw.go.kr" target="blank">보건복지부</a>
-                    <a href="http://jejubokji.net" target="blank">제주특별자치도사회복지협의회</a>
-                    <a href="http://jeju.welfare.net" target="blank">제주특별자치도사회복지사협회</a>
-                    <a href="https://jj.chest.or.kr" target="blank">제주사회복지공동모금회</a>
-                    <a href="http://www.jejubumo.or.kr" target="blank">제주특별자치도장애인부모회</a>
-                    <a href="https://broso.or.kr/jeju" target="blank">제주특별자치도발달장애인지원센터</a>
-                    <a href="http://www.jaapd.or.kr" target="blank">제주특별자치도장애인권익옹호기관</a>
-                    <a href="http://www.jejurehab.or.kr" target="blank">제주특별자치도장애인종합복지관</a>
-                    <a href="http://jcil.or.kr" target="blank">제주장애인자립생활센터</a>
-                    <a href="http://www.jejuaidd.or.kr" target="blank">(사)제주특별자치도지적발달장애인복지협회</a>
+                    <a href="http://www.mohw.go.kr" target="blank" title="새창">보건복지부</a>
+                    <a href="http://jejubokji.net" target="blank" title="새창">제주특별자치도사회복지협의회</a>
+                    <a href="http://jeju.welfare.net" target="blank" title="새창">제주특별자치도사회복지사협회</a>
+                    <a href="https://jj.chest.or.kr" target="blank" title="새창">제주사회복지공동모금회</a>
+                    <a href="http://www.jejubumo.or.kr" target="blank" title="새창">제주특별자치도장애인부모회</a>
+                    <a href="https://broso.or.kr/jeju" target="blank" title="새창">제주특별자치도발달장애인지원센터</a>
+                    <a href="http://www.jaapd.or.kr" target="blank" title="새창">제주특별자치도장애인권익옹호기관</a>
+                    <a href="http://www.jejurehab.or.kr" target="blank" title="새창">제주특별자치도장애인종합복지관</a>
+                    <a href="http://jcil.or.kr" target="blank" title="새창">제주장애인자립생활센터</a>
+                    <a href="http://www.jejuaidd.or.kr" target="blank" title="새창">(사)제주특별자치도지적발달장애인복지협회</a>
                 </div>
 
             </div>
