--- a/or03.html
+++ b/or03.html
@@ -7,8 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>제주시장애인지역사회통합돌봄지원센터</title>
     <link href="sources/css/style.css" rel="stylesheet">
+    <link href="sources/css/jquery.bxslider.min.css" rel="stylesheet">
+
     <!-- javaScript -->
     <script src="sources/js/jquery-1.11.3.min.js"></script>
+    <script src="sources/js/jquery.bxslider.min.js"></script>
+    <script src="sources/js/slick.min.js"></script>
     <script src="sources/js/common.js"></script>
 
 </head>
@@ -16,7 +20,7 @@
 <body class="gnb_sub">
     <!-- S:skip_navi -->
     <div class="skip_navi">
-        <a class="sr-only sr-only-focusable" href="#header">메뉴 바로가기</a>
+        <a class="sr-only sr-only-focusable" href="#first">메뉴 바로가기</a>
         <a class="sr-only sr-only-focusable" href="#content">본문 바로가기</a>
         <a class="sr-only sr-only-focusable" href="#footer">푸터 바로가기</a>
     </div>
@@ -25,54 +29,46 @@
     <header id="header" class="main">
         <div class="container">
             <h1>
-                <a href="/wp/assets/source/images/logo.svg" title="제주시장애인지역사회통합돌봄지원센터 홈페이지 메인 이동">제주시장애인지역사회통합돌봄지원센터</a>
+                <a href="/">제주시장애인지역사회통합돌봄지원센터</a>
             </h1>
-
-            <div class="util-menu">
-                <a href="#" title="전체메뉴 토글"><i class="icon-menu"></i>전체메뉴</a>
-            </div>
         </div>
 
         <nav id="main-menu">
-
-            <div class="home_btn all">
-                <a href="#" class="home" title="메인 이동">home<i class="icon-home-1"></i></a>
-            </div>
-
             <ul class="menu">
                 <li>
                     <h2>
-                        <a href="">사업안내</a>
+                        <a class="active" id="first" href="">사업안내</a>
                     </h2>
-
-                    <div>
+                    <div class="active">
+                        <a href="#" class="home_btn" title="메인 이동">home<i class="icon-home-1"></i></a>
                         <h3>사업안내</h3>
                         <ul>
                             <li>
-                                <span>·</span><a href="">사업안내</a>
+                                <a href="">사업안내</a>
                             </li>
-                        </ul>
+                        </ul>                   
                     </div>
-                </li>
+                </li>       
                 <li>
                     <h2>
                         <a href="">소식마당</a>
                     </h2>
 
                     <div>
+                        <a href="#" class="home_btn" title="메인 이동">home<i class="icon-home-1"></i></a>
                         <h3>소식마당</h3>
                         <ul>
                             <li>
-                                <span>·</span><a href="">공지사항</a>
+                                <a href="">공지사항</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">통합돌봄소식</a>
+                                <a href="">통합돌봄소식</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">채용공고</a>
+                                <a href="">채용공고</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">언론보도</a>
+                                <a href="">언론보도</a>
                             </li>
                         </ul>
                     </div>
@@ -83,22 +79,23 @@
                     </h2>
 
                     <div>
+                        <a href="#" class="home_btn" title="메인 이동">home<i class="icon-home-1"></i></a>
                         <h3>정보마당</h3>
                         <ul>
                             <li>
-                                <span>·</span><a href="">문서자료</a>
+                                <a href="">문서자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">복지뉴스</a>
+                                <a href="">복지뉴스</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">사진자료</a>
+                                <a href="">사진자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">영상자료</a>
+                                <a href="">영상자료</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">웹진</a>
+                                <a href="">웹진</a>
                             </li>
                         </ul>
                     </div>
@@ -109,35 +106,41 @@
                     </h2>
 
                     <div>
+                        <a href="#" class="home_btn" title="메인 이동">home<i class="icon-home-1"></i></a>
                         <h3>센터안내</h3>
                         <ul>
                             <li>
-                                <span>·</span><a href="">인사말</a>
+                                <a href="">인사말</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">운영법인</a>
+                                <a href="">운영법인</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">센터소개</a>
+                                <a href="">센터소개</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">대관안내</a>
+                                <a href="">대관안내</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">후원 및 자원봉사</a>
+                                <a href="">후원 및 자원봉사</a>
                             </li>
                             <li>
-                                <span>·</span><a href="">찾아오시는길</a>
+                                <a href="">찾아오시는길</a>
                             </li>
                         </ul>
                     </div>
                 </li>
             </ul>
 
-            <button>닫기</button>
         </nav>
 
+
+        <div class="util-menu">
+            <a href="#"><i class="icon-menu"></i>전체메뉴</a>
+        </div>
     </header>
+
+    <button class="menuClose">메뉴닫기</button>
     <!-- E:header -->
     <!-- S:mainContent -->
     <div id="content">
@@ -352,23 +355,23 @@
                 </li>
             </ul>
 
+
             <div class="agency">
-                <input type="checkbox" id="agency-open">
-                <label for="agency-open">유관기관 <i class="icon-right-open"></i></label>
+                <button class="agency-open">유관기관 <i class="icon-right-open"></i></button>
                 <div class="agency-link">
-                    <a href="http://www.mohw.go.kr" target="blank">보건복지부</a>
-                    <a href="http://jejubokji.net" target="blank">제주특별자치도사회복지협의회</a>
-                    <a href="http://jeju.welfare.net" target="blank">제주특별자치도사회복지사협회</a>
-                    <a href="https://jj.chest.or.kr" target="blank">제주사회복지공동모금회</a>
-                    <a href="http://www.jejubumo.or.kr" target="blank">제주특별자치도장애인부모회</a>
-                    <a href="https://broso.or.kr/jeju" target="blank">제주특별자치도발달장애인지원센터</a>
-                    <a href="http://www.jaapd.or.kr" target="blank">제주특별자치도장애인권익옹호기관</a>
-                    <a href="http://www.jejurehab.or.kr" target="blank">제주특별자치도장애인종합복지관</a>
-                    <a href="http://jcil.or.kr" target="blank">제주장애인자립생활센터</a>
-                    <a href="http://www.jejuaidd.or.kr" target="blank">(사)제주특별자치도지적발달장애인복지협회</a>
+                    <a href="http://www.mohw.go.kr" target="blank" title="새창">보건복지부</a>
+                    <a href="http://jejubokji.net" target="blank" title="새창">제주특별자치도사회복지협의회</a>
+                    <a href="http://jeju.welfare.net" target="blank" title="새창">제주특별자치도사회복지사협회</a>
+                    <a href="https://jj.chest.or.kr" target="blank" title="새창">제주사회복지공동모금회</a>
+                    <a href="http://www.jejubumo.or.kr" target="blank" title="새창">제주특별자치도장애인부모회</a>
+                    <a href="https://broso.or.kr/jeju" target="blank" title="새창">제주특별자치도발달장애인지원센터</a>
+                    <a href="http://www.jaapd.or.kr" target="blank" title="새창">제주특별자치도장애인권익옹호기관</a>
+                    <a href="http://www.jejurehab.or.kr" target="blank" title="새창">제주특별자치도장애인종합복지관</a>
+                    <a href="http://jcil.or.kr" target="blank" title="새창">제주장애인자립생활센터</a>
+                    <a href="http://www.jejuaidd.or.kr" target="blank" title="새창">(사)제주특별자치도지적발달장애인복지협회</a>
                 </div>
 
-            </div>
+            </div>      
             <address>
                     <p>제주특별자치도 제주시 중앙로 273, 나라키움 제주복합관사 101호(이도이동)  TEL: 064-751-5150  FAX: 064-756-5150</p>
                     <p>개소일: 2019년 11월 28일  센터장: 최영열</p>
