접근성 수정

--- a/main.html
+++ b/main.html
@@ -165,7 +165,7 @@
                             </a>
                         </li>
                         <li class="c3">
-                            <a href="#">
+                            <a href="#" alt="새창">
                                 <h5><span>사회적협동조합</span>희망나래</h5>
                             </a>
                         </li>
@@ -181,8 +181,8 @@
                     <ul class="notice">
                         <li class="veiw notice01">
                             <h3>공지사항<a href=""><i class="icon-plus"></i></a></h3>
-                            <button class="btn left">왼쪽화살표<i class="icon-left-open"></i></button>
-                            <button class="btn right">오른쪽화살표<i class="icon-right-open"></i></button>
+                            <button class="btn left">이전게시물<i class="icon-left-open"></i></button>
+                            <button class="btn right">다음게시물<i class="icon-right-open"></i></button>
                             <div class="border">
                                 <div class="item">
                                     <a href="#">장애인 가족기능강화 프로그램 참가자 모집
@@ -213,8 +213,8 @@
                         </li>
                         <li class="veiw notice02">
                             <h3>통합돌봄소식<a href=""><i class="icon-plus"></i></a></h3>
-                            <button class="btn left">왼쪽화살표<i class="icon-left-open"></i></button>
-                            <button class="btn right">오른쪽화살표<i class="icon-right-open"></i></button>
+                            <button class="btn left">이전게시물<i class="icon-left-open"></i></button>
+                            <button class="btn right">다음게시물<i class="icon-right-open"></i></button>
                             <div class="border">
                                 <div class="item">
                                     <a href="#">장애인 가족기능강화 프로그램 참가자 모집
@@ -245,8 +245,8 @@
                         </li>
                         <li class="veiw notice03">
                             <h3>복지뉴스<a href=""><i class="icon-plus"></i></a></h3>
-                            <button class="btn left">왼쪽화살표<i class="icon-left-open"></i></button>
-                            <button class="btn right">오른쪽화살표<i class="icon-right-open"></i></button>
+                            <button class="btn left">이전게시물<i class="icon-left-open"></i></button>
+                            <button class="btn right">다음게시물<i class="icon-right-open"></i></button>
                             <div class="border">
                                 <div class="item">
                                     <a href="#">장애인 가족기능강화 프로그램 참가자 모집
