사이드바 추가

--- a/main.html
+++ b/main.html
@@ -507,6 +507,12 @@
 
 
     <div class="sidebar">
+        <a href=""><i class='bx bxs-home'></i>희망나래</a>
+        <a href=""><i class='bx bxl-facebook' ></i>페이스북</a>
+        <a href=""><i class='bx bxl-youtube' ></i>유튜브</a>
+
+        <button onclick="window.scrollTo(0,0);">TOP</button>
+    </div>
 </body>
 
 </html>
